testsuite/tests/interpreter_errors/invalid_block_string/test.out
script.lkql:2:1: error: Invalid blockstring: first character should be whitespace
2 | |"pouet
  | ^^^^^^^
error: Errors during analysis
